--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -30,11 +30,13 @@
 {%- endcomment -%}
 
 <nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
+  
   <div class="navbar-brand">
 
-    <a class="navbar-item" style="padding-left: 0;" ; href="{{ site.baseurl }}/index.html">
+    <a class="navbar-brand" style="padding-left: 0;" ; href="{{ site.baseurl }}/index.html">
       <img src="../assets/img/Logo - La Verdad Continua.svg" width="30" width="40" alt="">
     </a>
+
 
     <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>
     <div class="navbar-item navbar-dark-mode__mobile is-hidden-tablet" onclick="modeSwitcher()">
@@ -65,6 +67,7 @@
         About
       </a>
     </div>
+    
     <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()">
       <div class="navbar-item">
         <div class="buttons">
