--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -33,8 +33,8 @@
   
   <div class="navbar-brand">
 
-    <a class="navbar-brand" style="padding-left: 0;" ; href="{{ site.baseurl }}/index.html">
-      <img src="../assets/img/Logo - La Verdad Continua.svg" width="30" width="40" alt="">
+    <a class="navbar-brand" style="padding-left: 0;" href="{{ site.baseurl }}/index.html">
+      <img src="../assets/img/Logo - La Verdad Continua.svg" width="30" width="40" alt="" class="d-inline-block align-top">
     </a>
 
 
@@ -67,7 +67,7 @@
         About
       </a>
     </div>
-    
+
     <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()">
       <div class="navbar-item">
         <div class="buttons">
