--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -34,7 +34,7 @@
   <div class="navbar-brand">
 
     <a class="navbar-brand" style="padding-left: 0;" href="{{ site.baseurl }}/index.html">
-      <img src="../assets/img/Logo - La Verdad Continua.svg" width="30" width="40" alt="" class="d-inline-block align-top">
+      <img src="../assets/img/Logo - La Verdad Continua.svg" width="30" width="40" alt="">
     </a>
 
 
