--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -31,13 +31,13 @@
 
 <nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
   
+  <!-- Nav Bar Brand  -->
   <div class="navbar-brand">
-
     <a class="navbar-brand" style="padding-left: 0;" href="{{ site.baseurl }}/index.html">
       <img src="../assets/img/Logo - La Verdad Continua.svg" width="30" width="40" alt="">
     </a>
 
-
+    <!--  -->
     <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>
     <div class="navbar-item navbar-dark-mode__mobile is-hidden-tablet" onclick="modeSwitcher()">
       <div class="buttons">
@@ -48,13 +48,17 @@
         </a>
       </div>
     </div>
+
+<!-- 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </a>
-  </div>
+  </div> 
+-->
 
+  <!-- Other Pages -->
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
       <a href="{{'/notes' | relative_url}}" class="navbar-item">
