--- a/assets/css/hyperlinks-icons.css
+++ b/assets/css/hyperlinks-icons.css
@@ -8,7 +8,7 @@ a[target= _blank]{
     background-image: url("../img/icons/amazon.svg");
     background-position: top right;    
     background-repeat: no-repeat;
-    background-color: --color-text-sub;    
+    background-color: var(--color-text-sub);    
     /* mix-blend-mode: exclusion; 
     background-size: contain;*/
     
@@ -19,7 +19,7 @@ a[target= _blank]{
 
     mask-position: right;
     -webkit-mask-position: right;
-    
+
     -webkit-mask-mode: revert;
     mask-mode: revert;
     /* padding-right: 1.1em; */
