nav height and hyperlink tests

--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -34,7 +34,7 @@
   <!-- Nav Bar Brand  -->
   <div class="navbar-brand">
     <a class="navbar-brand" style="padding-left: 0;" href="{{ site.baseurl }}/index.html">
-      <img src="../assets/img/Logo - La Verdad Continua.svg" width= 30% width= 40% alt="">
+      <img src="../assets/img/Logo - La Verdad Continua.svg" height= "100%" alt="">
     </a>
 
     <!--  -->
