--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -57,7 +57,7 @@
 
 
   <!-- Other Pages -->
-  <div id="navbarBasicExample" class="navbar-menu" style="padding-right: 0;">
+  <div id="navbarBasicExample" class="collapse navbar-collapse" style="padding-right: 0;">
     <div class="navbar-start">
       <a href="{{'/notes' | relative_url}}" class="navbar-item">
         Notes
