--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -34,7 +34,7 @@
   <!-- Nav Bar Brand  -->
   <div class="navbar-brand">
     <a class="navbar-brand" style="padding-left: 0;" href="{{ site.baseurl }}/index.html">
-      <img src="../assets/img/Logo - La Verdad Continua.svg" height= 100% alt="">
+      <img src="../assets/img/Logo - La Verdad Continua.svg" width="100%"  alt="">
     </a>
 
     <!--  -->
@@ -57,7 +57,7 @@
 
 
   <!-- Other Pages -->
-  <div id="navbarBasicExample" class="collapse navbar-collapse" style="padding-right: 0;">
+  <div id="navbarBasicExample" class="navbar-menu" style="padding-right: 0;">
     <div class="navbar-start">
       <a href="{{'/notes' | relative_url}}" class="navbar-item">
         Notes
