--- a/assets/css/hyperlinks-icons.css
+++ b/assets/css/hyperlinks-icons.css
@@ -35,43 +35,26 @@
 } */
 
 
-/* body {
-    background-image: url(happy.svg);
-  }
-
-<svg width="100" height="100" src = "happy.svg" fill="yellow"></svg>
-
-svg{
-    url("../img/icons/youtube.svg")
-    var(--text-faint)
-}
-
-src = "happy.svg" */
-
-
-
-/* a[href^="http"] {
-    background-image: url(../img/external-link.svg);
-    background-repeat: no-repeat;
-    background-position: right;
-    padding-right: 1.3rem;
-} */
-
-
 a[target= _blank]{
-    background-image: url("../img/icons/amazon.svg");
-    background-position: top right;    
-    background-repeat: no-repeat;
-    background-color: --color-text-sub;    
+    background-color: --color-text-sub;   
     /*  background-size: contain;*/
     mix-blend-mode: hard-light;
+
     -webkit-mask-image: url("../img/icons/amazon.svg");
     mask-image: url("../img/icons/amazon.svg");
-    mask-repeat: no-repeat;
 
+    mask-repeat: no-repeat;
     -webkit-mask-repeat: no-repeat;
+
+
     mask-position: right;
 
     /* padding-right: 1.1em; */
 
 }
+
+
+/* background-image: url("../img/icons/amazon.svg");
+
+background-position: top right;    
+background-repeat: no-repeat; */
