--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -30,15 +30,14 @@
 {%- endcomment -%}
 
 <nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
-  
+
   <!-- Nav Bar Brand  -->
   <div class="navbar-brand">
     <a class="navbar-brand" style="padding-left: 0;" href="{{ site.baseurl }}/index.html">
-      <img src="../assets/img/Logo - La Verdad Continua.svg" width="100%"  alt="">
+      <img src="../assets/img/Logo - La Verdad Continua.svg" width="100%" alt="">
     </a>
 
-    <!--  -->
-    <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>
+    <!-- <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>
     <div class="navbar-item navbar-dark-mode__mobile is-hidden-tablet" onclick="modeSwitcher()">
       <div class="buttons">
         <a class="button is-text">
@@ -47,13 +46,14 @@
           </span>
         </a>
       </div>
-    </div>
+    </div> -->
 
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
+
     </a>
-  </div> 
+  </div>
 
 
   <!-- Other Pages -->
@@ -69,6 +69,7 @@
         About
       </a>
     </div>
+
 
     <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()">
       <div class="navbar-item">
