--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -37,7 +37,7 @@
       <img src="../assets/img/Logo - La Verdad Continua.svg" width="100%" alt="">
     </a>
 
-    <!-- <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>
+    <!--
     <div class="navbar-item navbar-dark-mode__mobile is-hidden-tablet" onclick="modeSwitcher()">
       <div class="buttons">
         <a class="button is-text">
@@ -70,7 +70,7 @@
       </a>
     </div>
 
-
+    <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>
     <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()">
       <div class="navbar-item">
         <div class="buttons">
