--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -71,7 +71,7 @@
     </div>
 
     <script src="{{ site.baseurl }}/assets/js/modeswitcher.js"></script>
-    <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()">
+    <div class="navbar-end" onclick="modeSwitcher()">
       <div class="navbar-item">
         <div class="buttons">
           <a class="button is-text">
