--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -23,3 +23,11 @@
     </div>
     <h3 style="padding-top: 2rem;"><a href=mailto:hiran.v@gmail.com>hiran.v@gmail.com</a></h3>
 </div>
+
+
+<div class="block">
+    <input class="input is-medium" type="text" placeholder="Search notes.." id="search-input" autocomplete="off">
+    <div id="search-results" class="search-results"></div>
+</div>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/Search.js"></script>
