--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -31,7 +31,7 @@
 
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="Hiran Venugopalan" property="og:site_name" />
+    <meta content="La Verdad Continua" property="og:site_name" />
     <meta content="Product and Type Designer | UI UX | Design Mentoring" property="og:description">
     <meta content="{{ site.url }}/about/" property="article:author">
     <meta property="og:image" content="../assets/img/HirOG.png">
