--- a/assets/css/hyperlinks-icons.css
+++ b/assets/css/hyperlinks-icons.css
@@ -74,7 +74,7 @@ a[target= "_blank"]::after {
     --link-icon-size: 0.5em;
     --link-icon-offset-x: 0.20em;
     --link-icon-offset-y: 0.25em;
-    --link-icon-url: "../img/icons/amazon.svg";
+    --link-icon-url: url("../img/icons/amazon.svg");
 
     content: "";
     position: static;
