--- a/assets/css/hyperlinks-icons.css
+++ b/assets/css/hyperlinks-icons.css
@@ -70,7 +70,7 @@ background-repeat: no-repeat; */
 
 /* data-link-icon-type='svg' */
 
-a[target= "_blank"]::after {
+a[href="https://kaleyra.com/"]::after {
     --link-icon-size: 0.5em;
     --link-icon-offset-x: 0.20em;
     --link-icon-offset-y: 0.25em;
