--- a/assets/css/hyperlinks-icons.css
+++ b/assets/css/hyperlinks-icons.css
@@ -74,7 +74,7 @@ a[href="https://kaleyra.com/"]::after {
     --link-icon-size: 0.5em;
     --link-icon-offset-x: 0.20em;
     --link-icon-offset-y: 0.25em;
-    --link-icon-url: url("../img/icons/amazon.svg");
+    --link-icon-url: url("https://www.gwern.net/static/img/icons/wikipedia.svg");
 
     content: "";
     position: static;
