--- a/assets/css/hyperlinks-icons.css
+++ b/assets/css/hyperlinks-icons.css
@@ -90,7 +90,7 @@ background-repeat: no-repeat; */
 
 
 
-a[href^="https://"] {
+a[href^="https://"]::after {
     --link-icon-size: 0.5em;
     --link-icon-offset-x: 0.20em;
     --link-icon-offset-y: 0.25em;
