--- a/assets/css/hyperlinks-icons.css
+++ b/assets/css/hyperlinks-icons.css
@@ -94,7 +94,7 @@ a[href^="https://"]::after {
     --link-icon-size: 0.5em;
     --link-icon-offset-x: 0.20em;
     --link-icon-offset-y: 0.25em;
-    --link-icon-url: url("https://www.gwern.net/static/img/icons/wikipedia.svg");
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/external-link.svg");
     --image-opacity: 0.45;
 
 
@@ -111,18 +111,91 @@ a[href^="https://"]::after {
     
 }
 
+/* Amazon */
+a[href^="https://www.amazon"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/Reddit.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
+}
 
-a[href^="https://www.youtube"] {
-    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/youtube.svg");    
-    --link-icon-size: 0.5em;
-    --link-icon-offset-x: 0.20em;
-    --link-icon-offset-y: 0.25em;
+/* Apple */
+a[href^="https://www.apple"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/Reddit.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
+}
 
-    padding: 0 var(--link-icon-size) 0 0;
 
-    margin: 0 0 0 var(--link-icon-offset-x);
-    background-image: var(--link-icon-url);
-    background-size: var(--link-icon-size);
-    background-position-y: var(--link-icon-offset-y);
+/* GitHub */
+a[href^="https://www.github"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/GitHub.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
+}
 
+/* Facebook */
+a[href^="https://www.facebook"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/Facebook.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
+}
+
+/* Mega */
+a[href^="https://www.mega"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/Mega.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
+}
+
+/* Dropbox */
+a[href^="https://www.dropbox"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/Dropbox.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
+}
+
+/* OpenAI */
+a[href^="https://www.openai"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/OpenAI.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
+}
+
+/* Youtube */
+a[href^="https://www.youtube"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/youtube.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
+}
+
+/* Wikipedia */
+a[href^="https://www.wikipedia"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/wikipedia.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
+}
+
+/* Substack */
+a[href$="@gmail.com"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/mail.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
+}
+
+/* Reddit */
+a[href^="https://www.reddit"]::after {
+    --link-icon-url: url("{{ site.baseurl }}/assets/img/icons/Reddit.svg") !important;    
+    --link-icon-size: 0.5em !important;
+    --link-icon-offset-x: 0.20em !important;
+    --link-icon-offset-y: 0.25em !important;
 }
