--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -17,8 +17,8 @@
 <div class="home-intro">
     <div class="home-sub-text">
         <h3 class="colorless-title">I mentor designers and teams on design, strategy and knowledge management. Book slots via <a
-                href="https://adplist.org/mentors/hiran-venugopalan" target="_blank">ADPList</a>, <a
-                href="https://mentorcruise.com/mentor/hiranvenugopalan/" target="_blank">MentorCruise</a>, or Get in
+                href="https://youtube.com" target="_blank">ADPList</a>, <a
+                href="https://wikipedia.com" target="_blank">MentorCruise</a>, or Get in
             touch.</h3>
     </div>
     <h3 style="padding-top: 2rem;"><a href=mailto:hiran.v@gmail.com>hiran.v@gmail.com</a></h3>
