--- a/assets/css/hyperlinks-icons.css
+++ b/assets/css/hyperlinks-icons.css
@@ -8,8 +8,8 @@
 
     background-color: var(--color-text-sub);  
 
-    -webkit-mask-image: url("../img/icons/amazon.svg");
-    mask-image: url("../img/icons/amazon.svg");
+    -webkit-mask-image: url('../img/icons/amazon.svg');
+    mask-image: url('../img/icons/amazon.svg');
     mask-repeat: no-repeat;
     -webkit-mask-repeat: no-repeat;
     mask-position: right;
@@ -22,13 +22,13 @@
 } */
 
 
-    /* background-image: url("../img/icons/amazon.svg");
+    /* background-image: url('../img/icons/amazon.svg');
     background-position: top right;    
     background-repeat: no-repeat; */    
     /* padding-right: 1.1em; */
 
-/* a[href^="https://www.youtube"] {
-    background-image: url("../img/icons/youtube.svg");
+/* a[href^='https://www.youtube'] {
+    background-image: url('../img/icons/youtube.svg');
     background-repeat: no-repeat;
     background-position: right;
     padding-right: 1.3rem;
@@ -40,8 +40,8 @@
     
     mix-blend-mode: hard-light;
 
-    -webkit-mask-image: url("../img/icons/amazon.svg");
-    mask-image: url("../img/icons/amazon.svg");
+    -webkit-mask-image: url('../img/icons/amazon.svg');
+    mask-image: url('../img/icons/amazon.svg');
 
     mask-repeat: no-repeat;
     -webkit-mask-repeat: no-repeat;
@@ -56,7 +56,7 @@
     /*  background-size: contain;*/
 
 
-/* background-image: url("../img/icons/amazon.svg");
+/* background-image: url('../img/icons/amazon.svg');
 
 background-position: top right;    
 background-repeat: no-repeat; */
@@ -70,13 +70,13 @@ background-repeat: no-repeat; */
 
 /* data-link-icon-type='svg' */
 
-/* a[href="https://kaleyra.com/"]::after {
+/* a[href='https://kaleyra.com/']::after {
     --link-icon-size: 0.5em;
     --link-icon-offset-x: 0.20em;
     --link-icon-offset-y: 0.25em;
-    --link-icon-url: url("https://www.gwern.net/static/img/icons/wikipedia.svg");
+    --link-icon-url: url('https://www.gwern.net/static/img/icons/wikipedia.svg');
 
-    content: "";
+    content: '';
     position: static;
     padding: 0 var(--link-icon-size) 0 0;
     margin: 0 0 0 var(--link-icon-offset-x);
@@ -90,15 +90,15 @@ background-repeat: no-repeat; */
 
 
 
-a[href^="https://"]::after {
+a[href^='https://']::after {
     --link-icon-size: 0.5em;
     --link-icon-offset-x: 0.20em;
     --link-icon-offset-y: 0.25em;
-    --link-icon-url: url("../../assets/img/icons/external-link.svg");
+    --link-icon-url: url('../../assets/img/icons/external-link.svg');
     --image-opacity: 0.45;
 
 
-    content: "";
+    content: '';
     position: static;
     padding: 0 var(--link-icon-size) 0 0;
     margin: 0 0 0 var(--link-icon-offset-x);
@@ -112,16 +112,16 @@ a[href^="https://"]::after {
 }
 
 /* Amazon */
-a[href^="https://www.amazon"]::after {
-    --link-icon-url: url("../../assets/img/icons/Reddit.svg") !important;    
+a[href^='https://www.amazon']::after {
+    --link-icon-url: url('../../assets/img/icons/Reddit.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
 }
 
 /* Apple */
-a[href^="https://www.apple"]::after {
-    --link-icon-url: url("../../assets/img/icons/Reddit.svg") !important;    
+a[href^='https://www.apple']::after {
+    --link-icon-url: url('../../assets/img/icons/Reddit.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
@@ -129,72 +129,72 @@ a[href^="https://www.apple"]::after {
 
 
 /* GitHub */
-a[href^="https://www.github"]::after {
-    --link-icon-url: url("../../assets/img/icons/GitHub.svg") !important;    
+a[href^='https://www.github']::after {
+    --link-icon-url: url('../../assets/img/icons/GitHub.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
 }
 
 /* Facebook */
-a[href^="https://www.facebook"]::after {
-    --link-icon-url: url("../../assets/img/icons/Facebook.svg") !important;    
+a[href^='https://www.facebook']::after {
+    --link-icon-url: url('../../assets/img/icons/Facebook.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
 }
 
 /* Mega */
-a[href^="https://www.mega"]::after {
-    --link-icon-url: url("../../assets/img/icons/Mega.svg") !important;    
+a[href^='https://www.mega']::after {
+    --link-icon-url: url('../../assets/img/icons/Mega.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
 }
 
 /* Dropbox */
-a[href^="https://www.dropbox"]::after {
-    --link-icon-url: url("../../assets/img/icons/Dropbox.svg") !important;    
+a[href^='https://www.dropbox']::after {
+    --link-icon-url: url('../../assets/img/icons/Dropbox.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
 }
 
 /* OpenAI */
-a[href^="https://www.openai"]::after {
-    --link-icon-url: url("../../assets/img/icons/OpenAI.svg") !important;    
+a[href^='https://www.openai']::after {
+    --link-icon-url: url('../../assets/img/icons/OpenAI.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
 }
 
 /* Youtube */
-a[href^="https://www.youtube"]::after {
-    --link-icon-url: url("../../assets/img/icons/youtube.svg") !important;    
+a[href^='https://www.youtube']::after {
+    --link-icon-url: url('../../assets/img/icons/youtube.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
 }
 
 /* Wikipedia */
-a[href^="https://www.wikipedia"]::after {
-    --link-icon-url: url("../../assets/img/icons/wikipedia.svg") !important;    
+a[href^='https://www.wikipedia']::after {
+    --link-icon-url: url('../../assets/img/icons/wikipedia.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
 }
 
 /* Substack */
-a[href$="@gmail.com"]::after {
-    --link-icon-url: url("../../assets/img/icons/mail.svg") !important;    
+a[href$='@gmail.com']::after {
+    --link-icon-url: url('../../assets/img/icons/mail.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
 }
 
 /* Reddit */
-a[href^="https://www.reddit"]::after {
-    --link-icon-url: url("../../assets/img/icons/Reddit.svg") !important;    
+a[href^='https://www.reddit']::after {
+    --link-icon-url: url('../../assets/img/icons/Reddit.svg') !important;    
     --link-icon-size: 0.5em !important;
     --link-icon-offset-x: 0.20em !important;
     --link-icon-offset-y: 0.25em !important;
